--- a/css/初识燕大.css
+++ b/css/初识燕大.css
@@ -1,6 +1,7 @@
 *{ margin:0px; text-decoration:none;}
-
-  body{margin-top:5px;}
+  
+  body{margin-top:5px;
+    }
 
   #container{width:534px; height:400px; position: absolute; left:500px; top:200px; border:3px solid #333;overflow:hidden; }
 
@@ -27,4 +28,19 @@ background-color: RGBA(0,0,0,.3); color:#fff;}
    #prev{left:20px;}
 
    #next{right:20px;}
-
+.img img{
+  width:100%;
+}
+.img a{
+  font-weight:bold;
+	font: 2rem /3.2 "微软雅黑","Microsoft Yahei";
+	padding:0.5rem;
+	font-size: 1.25rem;
+	color:white;
+  position: absolute;
+  left: 650px;
+  top: 120px;
+	background-color:#9b1c1f;
+	margin:0;
+text-decoration:none;
+}
