校徽超链接到学校官网

--- a/css/233.css
+++ b/css/233.css
@@ -20,4 +20,16 @@ body .e img{position: absolute;
     top:0px;
 
 }
+body a.首页{
+	padding:0.5rem;
+    position: absolute;
+    left:1400px;
+    top: 600px;
+    text-decoration: none;
+    color:darkorange;
+    font: 2rem /3.2 "微软雅黑","Microsoft Yahei";
+}
+body a.首页:hover{
+  color:wheat;
+}
     
