--- a/css/初识燕大.css
+++ b/css/初识燕大.css
@@ -30,6 +30,7 @@ background-color: RGBA(0,0,0,.3); color:#fff;}
    #next{right:20px;}
 .img img{
   width:100%;
+  z-index: -9999;
 }
 .img a.印象{
   font-weight:bold;
